# ffmpeg-gui

./: .gitignore  CMakeLists.txt  ChooseAudioCodec.cpp  ChooseAudioCodec.hpp  ChooseAudioCodec.ui  ChooseFileFormat.cpp  ChooseFileFormat.hpp  ChooseFileFormat.ui  ChooseGeneric.cpp  ChooseGeneric.hpp  ChooseParameters.cpp  ChooseParameters.hpp  ChooseVideoCodec.cpp  ChooseVideoCodec.hpp  ChooseVideoCodec.ui  FFMPEG.cpp  FFMPEG.hpp  FileList.cpp  FileList.hpp  Global.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Makefile  StartFFmpeg.cpp  StartFFmpeg.hpp  Utils.cpp  Utils.hpp  example.ui  ffmpeg.cpp  main.cpp  ui_ChooseFileFormat.h  ui_example.h
